fix double check on master PR

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ name: F2N film service CI
 
 on:
   push:
-    branches: [ "main" , "develop" ]
+    branches: [ "develop" ]
   pull_request:
     branches: [ "main" ]
 
