--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,18 @@ services:
         condition: service_healthy
 
   PostgreSQL:
-    image: postgres
+    image: postgres:12
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=film2night
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+      - ./sql/F2n_db_tables.sql:/docker-entrypoint-initdb.d/F2n_db_tables.sql
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: [ "CMD-SHELL", "pg_isready -U f2n_admin -d film2night" ]
       interval: 5s
       retries: 2
 
