--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: 'film2night'
     ports:
       - "8081:8081"
+    volumes:
+      - ./.env:/usr/local/lib/env
     depends_on:
       PostgreSQL:
         condition: service_healthy
@@ -13,14 +15,14 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=film2night
+      - POSTGRES_PASSWORD=${PSQL_PWD}
+      - POSTGRES_USER=${PSQL_USER}
+      - POSTGRES_DB=${PSQL_DB}
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
       - ./sql/F2n_db_tables.sql:/docker-entrypoint-initdb.d/F2n_db_tables.sql
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U f2n_admin -d film2night" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${PSQL_USER} -d ${PSQL_DB}" ]
       interval: 5s
       retries: 2
 
@@ -29,5 +31,6 @@ services:
     ports:
       - "8080:8080"
     volumes:
+      - ./.env:/usr/local/tomcat/webapps/env
       - ./target/film2night.war:/usr/local/tomcat/webapps/film2night.war
       - ./target/film2night:/usr/local/tomcat/webapps/ROOT
