--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,6 @@ PSQL_F2N_PWD="your DB_USER_PWD"
 PSQL_F2N_DB="your DB_NAME"
 PSQL_F2N_DB_URL=jdbc:postgresql://PostgreSQL/"DB_NAME"
 PSQL_F2N_DB_TEST_URL=jdbc:postgresql://PostgreSQL/"DB_NAME"_test
-PSQL_LOCAL_TEST_URL=jdbc:postgresql://host.docker.internal:5432/"DB_NAME"_test
+PSQL_LOCAL_WSL_TEST_URL=jdbc:postgresql://host.docker.internal:5432/"DB_NAME"_test
+PSQL_LOCAL_LNX_TEST_URL=jdbc:postgresql://0.0.0.0:5432/"DB_NAME"_test
 KNPSK_API_KEY="your API_KEY"
