--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: F2N film service CI
 
 on:
@@ -13,10 +5,8 @@ on:
     branches: [ "main", "develop" ]
 
 jobs:
-  build:
-
+  build-test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -30,7 +20,10 @@ jobs:
 
     - name: 'Create env file'
       run: |
-        echo "${{ secrets.ENV_FILE }}" > .env
+        echo "${{secrets.ENV_FILE}}" > .env
+  
+    - name: Docker compose
+      run: docker-compose up -d
   
     - name: Test & publish code coverage
       uses: paambaati/codeclimate-action@v4.0.0
