--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,10 @@ jobs:
       run: |
         echo "${{secrets.ENV_FILE}}" > .env
   
+    - name: 'Create env.test file'
+      run: |
+        echo "${{secrets.TEST_ENV_FILE}}" > .env.test
+  
     - name: Docker compose
       run: docker-compose up -d
   
