--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,13 @@
         <artifactId>json</artifactId>
         <version>20230227</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.4.0</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
